Big change is adding in ElmoNER model and added JavaDoc